Update layout and styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -34,7 +33,10 @@
     <section class="main-title">
       <div class="content-wrapper">
           <h1>Beyond</br> Fitness</h1>
-      </div>
+          <div class="background-image-1"><img src="img/slice1.png" alt="Woman exercising"/></div>
+          <div class="background-image-2"><img src="img/slice1.png" alt="Woman exercising"/></div>
+          <div class="rectangle"></div>
+        </div>
     </section>
 
     <section class="sign-up">
